@@ -18,10 +18,20 @@ FONT_MODE=1;
 FONT_WIDTH=8;
 FONT_HEIGHT=10;
 ;Lists
+CONTAINERLIST_TITLE_XY=7,112;
+CONTAINERLIST_TITLE_UNSELECTED_STRING="Folders";
+CONTAINERLIST_TITLE_UNSELECTED_COLOR=555588;
+CONTAINERLIST_TITLE_SELECTED_STRING=  "<Select Folder>";
+CONTAINERLIST_TITLE_SELECTED_COLOR=AAAAFF;
+ENTRIESLIST_TITLE_XY=147,112;
+ENTRIESLIST_TITLE_UNSELECTED_STRING="Songs";
+ENTRIESLIST_TITLE_UNSELECTED_COLOR=555588;
+ENTRIESLIST_TITLE_SELECTED_STRING=  "<Select Song>";
+ENTRIESLIST_TITLE_SELECTED_COLOR="AAAAFF;
 CONTAINERLIST_X_RANGE=7,127;
-CONTAINERLIST_Y_RANGE=112,224;
+CONTAINERLIST_Y_RANGE=132,224;
 ENTRIESLIST_X_RANGE=147,475;
-ENTRIESLIST_Y_RANGE=112,224;
+ENTRIESLIST_Y_RANGE=132,224;
 LISTS_TITLE_COLOR=33CC33;
 ENTRIESLIST_COLOR=888888;
 SELECTED_ENTRY_COLOR=FFFFFF;
@@ -61,10 +71,20 @@ FG_COLOR=FFFFFF;
 FONT_MODE=1;
 FONT_WIDTH=8;
 FONT_HEIGHT=10;
+CONTAINERLIST_TITLE_XY=7,112;
+CONTAINERLIST_TITLE_UNSELECTED_STRING="Folders";
+CONTAINERLIST_TITLE_UNSELECTED_COLOR=885555;
+CONTAINERLIST_TITLE_SELECTED_STRING=  "<Select Folder>";
+CONTAINERLIST_TITLE_SELECTED_COLOR=FFAAAA;
+ENTRIESLIST_TITLE_XY=147,112;
+ENTRIESLIST_TITLE_UNSELECTED_STRING="Songs";
+ENTRIESLIST_TITLE_UNSELECTED_COLOR=885555;
+ENTRIESLIST_TITLE_SELECTED_STRING=  "<Select Song>";
+ENTRIESLIST_TITLE_SELECTED_COLOR="FFAAAA;
 CONTAINERLIST_X_RANGE=7,127;
-CONTAINERLIST_Y_RANGE=112,224;
+CONTAINERLIST_Y_RANGE=132,224;
 ENTRIESLIST_X_RANGE=147,475;
-ENTRIESLIST_Y_RANGE=112,224;
+ENTRIESLIST_Y_RANGE=132,224;
 LISTS_TITLE_COLOR=33CC33;
 ENTRIESLIST_COLOR=888888;
 SELECTED_ENTRY_COLOR=FFFFFF;
